[package]
name = "subcipher"
version = "0.1.0"
license = "Apache-2.0 or MIT"
edition = "2024"
authors = ["Francisco Noel"]
description = "A high-level implementation of the caesar cipher encryption scheme"
readme = "README.md"
homepage = "https://github.com/byfnoel/caesar-cipher"
repository = "https://github.com/byfnoel/caesar-cipher"
categories = ["cryptography"]
keywords = [
	"rust",
	"encryption",
	"caesar-cipher",
	"cryptography",
	"substitution-cipher",
]

[lib]
name = "subcipher"
path = "src/lib.rs"

[[bin]]
name = "subcipher-cli"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 1

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3.0"
